Fix. #15の課題を修正しました（ヘッダで宣言していたpropertyを実装ファイルに移動）。

--- a/traning2-1-10/traning2-1-10/Base.lproj/Main.storyboard
+++ b/traning2-1-10/traning2-1-10/Base.lproj/Main.storyboard
@@ -50,7 +50,7 @@
                         </constraints>
                     </view>
                     <connections>
-                        <outlet property="mainTableView" destination="MyN-A4-AzG" id="EMK-W0-kFw"/>
+                        <outlet property="mainTableView" destination="MyN-A4-AzG" id="PrH-NF-qKo"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
