--- a/traning2-1-11/traning2-1-11/Base.lproj/Main.storyboard
+++ b/traning2-1-11/traning2-1-11/Base.lproj/Main.storyboard
@@ -49,7 +49,7 @@
                         </constraints>
                     </view>
                     <connections>
-                        <outlet property="mainTableView" destination="x69-NA-agu" id="Lpn-tn-b5u"/>
+                        <outlet property="mainTableView" destination="x69-NA-agu" id="Dnk-qd-i6X"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
