storyboard上のパーツ配置およびAutoLayoutの完了。

--- a/CalendarApp/CalendarApp/Base.lproj/Main.storyboard
+++ b/CalendarApp/CalendarApp/Base.lproj/Main.storyboard
@@ -6,6 +6,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13173"/>
+        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -18,19 +19,18 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="QjA-8l-gfh">
-                                <rect key="frame" x="67" y="248" width="240" height="128"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="QjA-8l-gfh">
+                                <rect key="frame" x="0.0" y="20" width="375" height="580.5"/>
+                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="l6m-ka-3z4">
                                     <size key="itemSize" width="50" height="50"/>
-                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="headerReferenceSize" width="50" height="50"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gSH-B8-v0D">
-                                        <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                        <rect key="frame" x="0.0" y="50" width="50" height="50"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
                                             <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
@@ -38,14 +38,50 @@
                                         </view>
                                     </collectionViewCell>
                                 </cells>
+                                <collectionReusableView key="sectionHeaderView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="IM1-QE-RT0">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="50"/>
+                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    <color key="backgroundColor" red="0.80000001190000003" green="0.80000001190000003" blue="0.80000001190000003" alpha="1" colorSpace="calibratedRGB"/>
+                                </collectionReusableView>
                             </collectionView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kat-yS-M6B" userLabel="Btn Wrapper View">
+                                <rect key="frame" x="0.0" y="600.5" width="375" height="66.5"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1LF-ck-noq">
+                                        <rect key="frame" x="324" y="18" width="31" height="30"/>
+                                        <state key="normal" title="次へ"/>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="k19-vK-rlA">
+                                        <rect key="frame" x="20" y="18" width="31" height="30"/>
+                                        <state key="normal" title="前へ"/>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" red="0.90196079019999997" green="0.90196079019999997" blue="0.90196079019999997" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstItem="k19-vK-rlA" firstAttribute="centerY" secondItem="kat-yS-M6B" secondAttribute="centerY" id="6qR-aO-I9p"/>
+                                    <constraint firstItem="k19-vK-rlA" firstAttribute="leading" secondItem="kat-yS-M6B" secondAttribute="leading" constant="20" id="9jM-dE-ikO"/>
+                                    <constraint firstItem="1LF-ck-noq" firstAttribute="centerY" secondItem="kat-yS-M6B" secondAttribute="centerY" id="Iye-P9-OTN"/>
+                                    <constraint firstAttribute="trailing" secondItem="1LF-ck-noq" secondAttribute="trailing" constant="20" id="THU-ji-PKC"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="kat-yS-M6B" firstAttribute="top" secondItem="QjA-8l-gfh" secondAttribute="bottom" id="72W-rw-taC"/>
+                            <constraint firstItem="kat-yS-M6B" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="9Di-2O-6oz"/>
+                            <constraint firstItem="kat-yS-M6B" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="Fv0-jo-htM"/>
+                            <constraint firstItem="QjA-8l-gfh" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="PeA-oT-Qji"/>
+                            <constraint firstItem="QjA-8l-gfh" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="RJc-nL-XjA"/>
+                            <constraint firstItem="kat-yS-M6B" firstAttribute="height" secondItem="8bC-Xf-vdC" secondAttribute="height" multiplier="0.1" id="euS-0h-pqo"/>
+                            <constraint firstItem="kat-yS-M6B" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="imv-q5-gxz"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="QjA-8l-gfh" secondAttribute="trailing" id="uIf-K1-rha"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="136.80000000000001" y="132.68365817091455"/>
         </scene>
     </scenes>
 </document>
