--- a/CalendarApp/CalendarApp/Base.lproj/Main.storyboard
+++ b/CalendarApp/CalendarApp/Base.lproj/Main.storyboard
@@ -29,7 +29,7 @@
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gSH-B8-v0D">
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="CalendarCell" id="gSH-B8-v0D">
                                         <rect key="frame" x="0.0" y="50" width="50" height="50"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
@@ -38,7 +38,7 @@
                                         </view>
                                     </collectionViewCell>
                                 </cells>
-                                <collectionReusableView key="sectionHeaderView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="IM1-QE-RT0">
+                                <collectionReusableView key="sectionHeaderView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="CallenderHeader" id="IM1-QE-RT0">
                                     <rect key="frame" x="0.0" y="0.0" width="375" height="50"/>
                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                     <color key="backgroundColor" red="0.80000001190000003" green="0.80000001190000003" blue="0.80000001190000003" alpha="1" colorSpace="calibratedRGB"/>
@@ -58,6 +58,8 @@
                                 </subviews>
                                 <color key="backgroundColor" red="0.90196079019999997" green="0.90196079019999997" blue="0.90196079019999997" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
+                                    <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="k19-vK-rlA" secondAttribute="trailing" constant="20" symbolic="YES" id="1kc-XE-9zP"/>
+                                    <constraint firstItem="1LF-ck-noq" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="kat-yS-M6B" secondAttribute="leading" constant="20" symbolic="YES" id="6kF-a3-zHk"/>
                                     <constraint firstItem="k19-vK-rlA" firstAttribute="centerY" secondItem="kat-yS-M6B" secondAttribute="centerY" id="6qR-aO-I9p"/>
                                     <constraint firstItem="k19-vK-rlA" firstAttribute="leading" secondItem="kat-yS-M6B" secondAttribute="leading" constant="20" id="9jM-dE-ikO"/>
                                     <constraint firstItem="1LF-ck-noq" firstAttribute="centerY" secondItem="kat-yS-M6B" secondAttribute="centerY" id="Iye-P9-OTN"/>
