--- a/CalendarApp/CalendarApp/CalendarCell.xib
+++ b/CalendarApp/CalendarApp/CalendarCell.xib
@@ -12,29 +12,43 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="CalendarCell">
-            <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="CalendarCell" id="gTV-IL-0wX" customClass="CalendarCell">
+            <rect key="frame" x="0.0" y="0.0" width="127" height="147"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                <rect key="frame" x="0.0" y="0.0" width="127" height="147"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="日" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gNa-UD-8CT">
-                        <rect key="frame" x="3" y="10" width="18" height="21"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <nil key="textColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="PaQ-io-Vxr">
+                        <rect key="frame" x="0.0" y="0.0" width="127" height="147"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="日" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gNa-UD-8CT">
+                                <rect key="frame" x="54.5" y="63" width="18" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="gNa-UD-8CT" firstAttribute="centerX" secondItem="PaQ-io-Vxr" secondAttribute="centerX" id="MxR-PB-nFc"/>
+                            <constraint firstItem="gNa-UD-8CT" firstAttribute="centerY" secondItem="PaQ-io-Vxr" secondAttribute="centerY" id="be2-WY-z71"/>
+                        </constraints>
+                    </view>
                 </subviews>
             </view>
             <constraints>
-                <constraint firstItem="gNa-UD-8CT" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="3" id="8Si-8o-nSS"/>
-                <constraint firstItem="gNa-UD-8CT" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="10" id="JxH-rJ-wQk"/>
+                <constraint firstItem="PaQ-io-Vxr" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="0dK-fM-b3r"/>
+                <constraint firstItem="PaQ-io-Vxr" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="R87-q9-pxH"/>
+                <constraint firstAttribute="bottom" secondItem="PaQ-io-Vxr" secondAttribute="bottom" id="RTI-Os-du1"/>
+                <constraint firstAttribute="trailing" secondItem="PaQ-io-Vxr" secondAttribute="trailing" id="cal-Hy-fWl"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="SEy-5g-ep8"/>
+            <size key="customSize" width="127" height="147"/>
             <connections>
                 <outlet property="CalenderCellContentLabel" destination="gNa-UD-8CT" id="9kt-WF-dXz"/>
             </connections>
+            <point key="canvasLocation" x="72.5" y="5.5"/>
         </collectionViewCell>
     </objects>
 </document>
