--- a/CalendarApp/CalendarApp/Contorollers/Base.lproj/Main.storyboard
+++ b/CalendarApp/CalendarApp/Contorollers/Base.lproj/Main.storyboard
@@ -22,7 +22,7 @@
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="QjA-8l-gfh">
                                 <rect key="frame" x="0.0" y="20" width="375" height="580.5"/>
                                 <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="0.0" minimumInteritemSpacing="0.0" id="l6m-ka-3z4">
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="0.0" minimumInteritemSpacing="5" id="l6m-ka-3z4">
                                     <size key="itemSize" width="50" height="50"/>
                                     <size key="headerReferenceSize" width="50" height="50"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
@@ -52,14 +52,16 @@
                                 <rect key="frame" x="0.0" y="600.5" width="375" height="66.5"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1LF-ck-noq">
-                                        <rect key="frame" x="324" y="18" width="31" height="30"/>
+                                        <rect key="frame" x="318" y="16" width="37" height="34"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                         <state key="normal" title="次へ"/>
                                         <connections>
                                             <action selector="goNextMonthBtn:" destination="BYZ-38-t0r" eventType="touchUpInside" id="51H-7z-P0c"/>
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="k19-vK-rlA">
-                                        <rect key="frame" x="20" y="18" width="31" height="30"/>
+                                        <rect key="frame" x="20" y="16" width="37" height="34"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                         <state key="normal" title="前へ"/>
                                         <connections>
                                             <action selector="goPreviousMonthBtn:" destination="BYZ-38-t0r" eventType="touchUpInside" id="vGT-hB-eOR"/>
